--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,20 @@
     <title>Mensajeros de la Paz</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="assets/icons/cropped-logoMensajeros-ok-32x32.png" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
+      rel="icon"
+      type="image/x-icon"
+      href="assets/icons/cropped-logoMensajeros-ok-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
-    />
+    /> -->
   </head>
   <body class="mat-typography">
     <app-root></app-root>
