--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       type="image/x-icon"
       href="assets/icons/cropped-logoMensajeros-ok-32x32.png"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
       rel="stylesheet"
@@ -18,7 +18,7 @@
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
-    />
+    /> -->
   </head>
   <body class="mat-typography">
     <app-root></app-root>
