Feat: Agrega metaetiquetas open graph

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,16 @@
     <title>Mensajeros de la Paz</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Mensajeros de la Paz" />
+    <meta property="og:description" content="Sistema de Reportes Digitales" />
+    <meta
+      property="og:image"
+      content="https://mensajeros-front.herokuapp.com/assets/images/logoMDP-OG.png"
+    />
+    <meta
+      property="twitter:image"
+      content="https://mensajeros-front.herokuapp.com/assets/images/logoMDP-OG.png"
+    />
     <link
       rel="icon"
       type="image/x-icon"
